Removed voting qualifier to prevent dual E-board positions

--- a/constitution.tex
+++ b/constitution.tex
@@ -578,7 +578,7 @@ However, the Chair and at least two-thirds of the Voting Members of E-Board must
 \asubsubsection{Qualifications for Chairperson, Evaluations Director, Social Director, Financial Director, Research and Development Director(s), House Improvements Director, History Director, Public Relations Director}
 \begin{enumerate}
 	\item Candidates must be Active Members during the term of office.
-	\item Elected or selected candidates may not hold two simultaneous voting E-Board positions, and must therefore resign their current position or decline a second position should they be elected or selected to a second voting position.
+	\item Elected or selected candidates may not hold two simultaneous E-Board positions, and must therefore resign their current position or decline a second position should they be elected or selected to a second position.
 	\item Candidates for Chair or Evals Director must reside on floor during the term of office.
 \end{enumerate}
 
