--- a/constitution.tex
+++ b/constitution.tex
@@ -577,7 +577,7 @@ However, the Chair and at least two-thirds of the Voting Members of E-Board must
 
 \asubsubsection{Qualifications for All Executive Board Members}
 \begin{enumerate}
-	\item  Candidates must be Active Members during the term of office.
+	\item Candidates must be Active Members during the term of office
 	\item Candidates must be enrolled students at RIT, must be in good academic standing with both RIT and their academic department, and may not be on a conduct sanction of disciplinary probation or higher during the term of office.
 \end{enumerate}
 
